# QuorumProof

./: Cargo.toml
api-server/src/: index.ts  searchIndex.ts
api-server/src/routes/: attestor.ts  audit.ts  credentials.ts
api-server/src/services/: audit.ts
api-server/tests/: audit-service.test.ts  audit.test.ts
contracts/integration_tests/src/: lib.rs
contracts/quorum_proof/src/: lib.rs  tests_new_features.rs
contracts/sbt_registry/src/: lib.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AppLayout.tsx  CredentialVerificationDashboard.tsx  Navbar.tsx  index.ts
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: index.ts
frontend/src/lib/hooks/: useFreighter.ts
frontend/src/pages/: QuorumSlice.tsx  VerificationDashboard.tsx
