[package]
name = "zk_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
# ZK proof verification libraries
ark-bn254 = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
# For bulletproofs range proofs  
bulletproofs = { version = "4.0", default-features = false, features = ["std"] }
merlin = { version = "3.0", default-features = false }
curve25519-dalek = { version = "4.0", default-features = false, features = ["serde"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
